--- a/lab2/src/main/res/layout/lab2_activity.xml
+++ b/lab2/src/main/res/layout/lab2_activity.xml
@@ -24,7 +24,8 @@
         android:layout_height="0dp"
         android:layout_below="@+id/btn_add_view"
         android:layout_alignParentBottom="true"
-        >
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="118dp">
 
         <ru.tpu.courses.lab2.Lab2ViewsContainer
             android:id="@+id/container"
