--- a/lab3/src/main/res/layout/lab3_activity_add_student.xml
+++ b/lab3/src/main/res/layout/lab3_activity_add_student.xml
@@ -6,40 +6,77 @@
 	android:orientation="vertical"
 	android:paddingTop="12dp">
 
-	<com.google.android.material.textfield.TextInputLayout
+	<ScrollView
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="match_parent">
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/first_name"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="@string/lab3_first_name"
-			/>
-	</com.google.android.material.textfield.TextInputLayout>
+			android:orientation="vertical">
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+			<Spinner
+				android:id="@+id/sex"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp"
+				android:entries="@array/lab3_sex_list"
+				android:spinnerMode="dropdown" />
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/second_name"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/lab3_second_name"
-			/>
-	</com.google.android.material.textfield.TextInputLayout>
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp">
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/last_name"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/lab3_last_name"
-			/>
-	</com.google.android.material.textfield.TextInputLayout>
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/second_name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/lab3_second_name"
+					/>
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/last_name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/lab3_last_name"
+					/>
+
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/first_name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/lab3_first_name"
+					/>
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/group_number"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:hint="@string/lab3_group_name" />
+
+			</com.google.android.material.textfield.TextInputLayout>
+		</LinearLayout>
+	</ScrollView>
 
 </LinearLayout>
