--- a/lab3/src/main/res/layout/lab3_activity.xml
+++ b/lab3/src/main/res/layout/lab3_activity.xml
@@ -31,9 +31,7 @@
             android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </ExpandableListView>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
